Resolve the depreciation issue of the --proxy parameter
The last script worked great but with the newer version of Keycloak, it says that it will remove the --proxy feature in the future. After a lot of research, I found ways to resolve this issue and get a very similar functionality after modifying the key parameters of the start command.

--- a/ci.yml
+++ b/ci.yml
@@ -9,6 +9,4 @@ test:
 run:
   steps:
     - name: Start Keycloak
-      command: bash ./keycloak-$(cat ./KEYCLOAK_VERSION)/bin/kc.sh start --hostname
-        $WORKSPACE_DEV_DOMAIN --http-port 3000 --db-url-database $DATABASE_URL
-        --proxy edge
+      command: bash ./keycloak-$(cat ./KEYCLOAK_VERSION)/bin/kc.sh start --hostname $WORKSPACE_DEV_DOMAIN --http-port 3000 --proxy-headers xforwarded --http-enabled true --db-url-database $DATABASE_URL
